user controller dashboard swagger update
